fix spacing

--- a/main.css
+++ b/main.css
@@ -207,6 +207,7 @@ a{
 
 .image-container {
   background-color: black;
+  margin-left: 120px;
 }
 
 .description-container {
